# latentSAT

./: .gitignore  README.md  pyproject.toml  run_models.py
src/latentsat/: __init__.py  download_model.py  model.py
src/latentsat/dataGen/: cleangen.py  convert2sft.py  genCoT.py  list_ansgen.py
src/latentsat/evaluate/: eval.py
src/latentsat/train/: stage_rl.py
src/latentsat/train/list_struct/: pretrain.py  rl.py
src/latentsat/utils/: cdcl.py  verify.py
tests/: test_verify.py
