[project]
name = "latentsat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Knowaywood", email = "knowaywood@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.2",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.7.1",
    "kernels>=0.12.2",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
